--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "commander": "2.0.0",
     "async": "0.2.9",
     "express": "3.3.7",
+    "hiredis": "0.1.15",
+    "redis": "0.8.6",
     "qiyilib": "*"
   },
   "main": "./index.js",
