--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,6 +1,1 @@
-{
-    "version": "0.0.8",
-    "log": true,
-    "moduleAutoReload": true,
-    "modules": ["play", "recommend", "list","top","home","chome","search","user","playhistory","album","source"]
-}
+"{\"log\":true,\"moduleAutoReload\":true,\"modules\":[\"test\"]}"
