--- a/conf/default.conf
+++ b/conf/default.conf
@@ -2,5 +2,10 @@
     "version": "0.0.8",
     "log": true,
     "moduleAutoReload": true,
-    "modules": ["play", "recommend", "list","top","home","chome","search","user","playhistory","album","source"]
+    "modules": ["community"],
+    "root": "/usr/local/lib/qns_modules/community",
+    "settings": {
+        "view engine": "jade",
+        "view cache": false
+    }
 }
