deliver cmd message over socket

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,1 +1,8 @@
-"{\"log\":true,\"moduleAutoReload\":true,\"modules\":[\"test\"]}"
+{
+	"socketPort": 56789,
+	"root": "/usr/local/lib/qns_modules/community",
+	"add": [
+		"community"
+	],
+	"modules": "community"
+}
