--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "qns",
   "description": "Qiyi Node Server",
-  "version": "0.0.11",
+  "version": "0.1.0",
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
-    "express": "3.3.7",
-    "forever":"0.10.11",
+    "express": "3.5.1",
+    "forever": "0.10.11",
     "qiyilib": "*",
-    "consolidate":"0.10.0",
-    "loglevel":"*"
+    "consolidate": "0.10.0",
+    "loglevel": "*",
+    "mongoose": "3.8.4",
+    "nssocket": "0.5.1",
+    "jade": "1.3.1",
+    "node.extend": "1.0.10",
+    "uglify-js": "2.4.13"
   },
-  "main":"./index.js",
+  "main": "./index.js",
   "bin": {
     "qns": "bin/qns.js"
   }
