--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,8 +1,8 @@
 {
 	"socketPort": 56789,
+	"modulePath": "/usr/local/lib/qns_modules/",
 	"root": "/usr/local/lib/qns_modules/community",
-	"add": [
+	"modules": [
 		"community"
-	],
-	"modules": "community"
+	]
 }
