--- a/conf/default.conf
+++ b/conf/default.conf
@@ -2,7 +2,6 @@
 	"socketPort": 56789,
 	"modulePath": "/usr/local/lib/qns_modules/",
 	"root": "/usr/local/lib/qns_modules/community",
-	"modules": [
-		"community"
-	]
+	"logPath": "/Users/seon/logs/qns/access.log",
+    "modules":"community"
 }
