--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,7 +1,7 @@
 {
 	"socketPort": 56789,
-	"modulePath": "/usr/local/lib/qns_modules/",
-	"root": "/usr/local/lib/qns_modules/community",
-	"logPath": "/Users/seon/logs/qns/access.log",
-	"modules": "community"
+	"logPath": "logs/qns.log",
+    "modulePath": "",
+    "root": "",
+	"modules": ""
 }
