remove config message

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qns",
   "description": "Qiyi Node Server",
-  "version": "0.2.12",
+  "version": "0.2.15",
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
@@ -21,6 +21,6 @@
     "qns": "bin/qns.js"
   },
   "scripts": {
-    "install": "if [ ! -d ~/.qns ]; then sudo -u $SUDO_USER mkdir ~/.qns; fi && sudo -u $SUDO_USER cp conf/default.conf ~/.qns/"
+    "postinstall": "if [ ! -d ~/.qns ]; then mkdir ~/.qns; fi && cp conf/default.conf ~/.qns/"
   }
 }
