--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qns",
   "description": "Qiyi Node Server",
-  "version": "0.2.28",
+  "version": "0.2.31",
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
@@ -9,7 +9,7 @@
     "forever": "0.10.11",
     "qiyilib": "*",
     "consolidate": "0.10.0",
-    "loglevel": "*",
+    "log4js": "0.6.13",
     "nssocket": "0.5.1",
     "jade": "1.3.1",
     "node.extend": "1.0.10",
