--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
-    "express": "3.5.1",
-    "forever": "0.10.11",
-    "qiyilib": "*",
+    "koa": "0.6.0",
+    "pm2": "0.8.2",
+    "koa-routing": "1.2.7",
     "consolidate": "0.10.0",
     "log4js": "0.6.13",
     "nssocket": "0.5.1",
     "jade": "1.3.1",
     "node.extend": "1.0.10",
-    "uglify-js": "2.4.13"
+    "uglify-js": "2.4.13",
+    "koa-views": "2.0.3",
+    "koa-log4js": "0.0.1",
+    "koa-vhost": "0.1.1",
+    "koa-static": "1.4.5",
+    "koa-sess": "0.3.1",
+    "koa-redis": "0.1.0",
+    "koa-body": "0.0.4"
   },
   "main": "./index.js",
   "bin": {
