--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qns",
   "description": "Qiyi Node Server",
-  "version": "0.4.3",
+  "version": "0.5.2",
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
@@ -20,10 +20,11 @@
     "koa-static": "1.4.5",
     "koa-sess": "0.3.1",
     "koa-redis": "0.1.0",
-    "koa-body": "0.0.4"
+    "koa-body": "0.0.4",
+    "qiyilib": "*"
   },
   "main": "./index.js",
   "bin": {
-    "qns": "bin/qns.js"
+    "qns": "--harmony bin/qns.js"
   }
 }
