--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qns",
   "description": "Qiyi Node Server",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
@@ -25,6 +25,6 @@
   },
   "main": "./index.js",
   "bin": {
-    "qns": "--harmony bin/qns.js"
+    "qns": "bin/qns.js"
   }
 }
