--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,7 +1,10 @@
 {
-    "socketPort": 56789,
-    "logPath": "logs/qns.log",
-    "modulePath": "",
-    "root": "",
-    "modules": ""
+  "socketPort": 56789,
+  "logPath": "logs/qns.log",
+  "vhosts":{
+    "community":{
+      "host":"community.qingcloud.com",
+      "path":"/Users/seon/code/pitrix-community/"
+    }
+  }
 }
