--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qns",
   "description": "QNS",
-  "version": "0.5.14",
+  "version": "0.5.17",
   "dependencies": {
     "commander": "2.0.0",
     "async": "0.2.9",
@@ -16,7 +16,7 @@
     "koa-log4js": "0.0.1",
     "koa-vhost": "0.1.1",
     "koa-static": "1.4.5",
-    "koa-sess": "0.3.1",
+    "koa-generic-session": "1.2.1",
     "koa-redis": "0.1.0",
     "koa-body": "0.0.4"
   },
